fix neo Travis failures